k8s-ingress/k8s/service-products.yml
apiVersion: v1
kind: Service
metadata:
  name: products-service
  namespace: k8s-ingress
spec:
  type: ClusterIP # default Service is ClusterIP
  selector:
    microservice: products-service
  ports:
    - protocol: TCP
      targetPort: 8001 # port on Service
      port: 8001 # port on Pod
